<resources>
    <string name="app_name">TradeApp</string>

    <string name="set_text">账号设置</string>
    <string name="bind_text">绑定淘宝</string>
    <string name="un_bind_text">解除绑定</string>
    <string name="please_bind_text">请绑定淘宝</string>
    <string name="taobao_text">淘宝账号</string>
    <string name="update_pwd_text">修改密码</string>
    <string name="update_ts_text">※※※※※※</string>
    <string name="un_login_text">退出登录</string>

    <string name="login_text">登录</string>
    <string name="registered_text">注册</string>
    <string name="edit_number_text">请输入手机号码</string>
    <string name="edit_code_text">请输入验证码</string>
    <string name="edit_password_text">请输入您的密码</string>
    <string name="set_password_text">请设置您的密码</string>
    <string name="get_code_text">获取验证码</string>
    <string name="rest_get_code_text">秒后重新获取</string>
    <string name="forget_text"><u>忘记密码？</u></string>
    <string name="btn_registered_text"><u>还没有账号，去注册！</u></string>
    <string name="btn_login_text"><u>已有账号，去登录！</u></string>
    <string name="agree_text">点击注册后即表示同意</string>
    <string name="protocol_text"><u>《惠淘购物注册协议》</u></string>
</resources>
