<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/title_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/set_text_main"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="18dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/set_text_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="已绑定手机号码"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/set_number"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/set_text_num"
                android:background="@color/white"
                android:textCursorDrawable="@drawable/cursor_color"
                android:drawablePadding="18dp"
                android:hint="@string/edit_number_text"
                android:inputType="phone"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignBottom="@+id/set_number"
                android:layout_toRightOf="@+id/set_text_num"
                android:background="@color/webBg" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/phone_n_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginLeft="18dp"
                android:background="@color/white"
                android:drawableLeft="@mipmap/ico_zh"
                android:textCursorDrawable="@drawable/cursor_color"
                android:drawablePadding="18dp"
                android:hint="@string/edit_number_text"
                android:inputType="phone"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="59dp"
                android:background="@color/webBg" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/code_edt"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:background="@color/white"
                android:drawableLeft="@mipmap/ico_yzm"
                android:textCursorDrawable="@drawable/cursor_color"
                android:drawablePadding="18dp"
                android:hint="@string/edit_code_text"
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:padding="5dp"
                android:text="@string/get_code_text"
                android:textColor="@color/google_blue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/code_edt"
                android:layout_marginLeft="59dp"
                android:background="@color/webBg" />

        </RelativeLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="18dp"
            android:background="@color/white"
            android:drawableLeft="@mipmap/ico_mm"
            android:textCursorDrawable="@drawable/cursor_color"
            android:drawablePadding="18dp"
            android:hint="@string/edit_password_text"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agree_text"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/go_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/protocol_text"
            android:textColor="@color/btn_select" />

    </LinearLayout>

    <Button
        android:id="@+id/userBtn"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sub_btn_bg"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/fr_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/forget_text" />

        <TextView
            android:id="@+id/go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/btn_registered_text" />

    </RelativeLayout>

</LinearLayout>