<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/title_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/set1"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/defa_btn_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/login_text"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/set1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/btn_right"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="18dp"
            android:background="@color/webBg"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/defa_btn_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/bind_text"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/set2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/btn_right"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="18dp"
            android:background="@color/webBg"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set3"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/defa_btn_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/update_pwd_text"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/set3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/btn_right"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:text="@string/update_ts_text"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="18dp"
            android:background="@color/webBg"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set4"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/defa_btn_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/un_login_text"
            android:textColor="@color/btn_select"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/btn_right"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="18dp"
            android:background="@color/webBg"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>



</LinearLayout>